# xcalc-cli

./: .gitignore  CMakeLists.txt  README.md  main.cpp
